# cpp-example-googletest

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
app/: greeter.cpp
cmake/module/find/: FindOpenCppCoverage.cmake  FindReportGenerator.cmake  Findvcpkg.cmake
data/: personal_name.in
include/fw/: exception.hpp  invalid_argument.hpp  string_util.hpp  string_util_interface.hpp
include/fw/greeter/: application.hpp  command_line.hpp  command_line_interface.hpp  config.hpp  config_interface.hpp  greeter_interface.hpp  personal_name.hpp  personal_name_repository_interface.hpp  stream_greeter.hpp  text_file_personal_name_repository.hpp
include/fw/io/: input_stream_util.hpp  input_stream_util_interface.hpp
src/fw/: exception.cpp
test/include/fw/greeter/testing/: command_line_mock.hpp  config_mock.hpp  personal_name_repository_mock.hpp
test/src/fw/googletest/: assertions.cpp  manual_testing.cpp
test/src/fw/greeter/: application_integration_test.cpp  application_unit_test.cpp  personal_name_test.cpp
